test/TestSuite/Syntax/Correct/include/dir3/all.tji
include "file1.tji" { }
include "file2.tji" { }

