test/TestSuite/Syntax/Errors/include_recursion.tji
include "include_recursion.tji"
